transition overflow bug fix attempt v2

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -239,6 +239,7 @@ $form-border-color-focus: #111111;
     margin-top: 15px;
     margin-bottom: 30px;
     @media (max-width: 768px) {margin-bottom: 45px;}
+    @media (max-width: 414px) {margin-top: 0;}
   }
   .contact-form {
     display: flex;
@@ -249,6 +250,7 @@ $form-border-color-focus: #111111;
       margin-bottom: 10px;
       font-size: 18px;
       @media (max-width: 1199px) {font-size: 15px;}
+      @media (max-width: 414px) {margin-bottom: 5px;}
     }
     input, textarea {
       margin-bottom: 15px;
@@ -261,6 +263,7 @@ $form-border-color-focus: #111111;
       transition: border-color 0.25s ease;
       animation-duration: 0.5s;
       @media (max-width: 1199px) {font-size: 12px;}
+      @media (max-width: 414px) {margin-bottom: 5px;}
       &:focus {
         outline: none;
         border-color: $form-border-color-focus;
@@ -300,8 +303,12 @@ $form-border-color-focus: #111111;
       font-weight: 700;
       font-size: 12px;
       color: #111111;
-      @media (max-width: 1199px) and (min-width: 769px) {& + h3 {margin-top: 10px;}}
-      @media (max-width: 480px) {& + h3 {margin-top: 10px;}}
+      @media (max-width: 1199px) and (min-width: 769px) {
+        & + h3 {margin-top: 10px;}
+      }
+      @media (max-width: 480px) {
+        & + h3 {margin-top: 5px;}
+      }
       i {margin-right: 5px;}
     }
   }
